--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,20 @@
 </head>
 <body>
 	<% if user_signed_in? %>
-		<%= link_to('Logout', destroy_user_session_path, method: :delete) %>
-	<% end %>
-<hr>
+    <nav class="navbar navbar-inverse">
+      <div class="container-fluid">
+        <div class="navbar-header active">
+          <a class="navbar-brand">MY NEW APP</a>
+          <ul class="nav navbar-nav">
+            <li><%= link_to("Newsfeed",root_url)%></li>
+            <li><%= link_to('Logout', destroy_user_session_path, method: :delete) %></li>
+          </ul>
+
+          
+  <% end %>
+      </div>
+    </div>
+  </nav>
 <%= yield %>
 
 </body>
