--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -8,19 +8,38 @@
   }
 
 - @posts.each do |p|
-  %div.panel.panel-success
-    %div.panel-heading
-      %b=link_to("#{p.title.truncate(30)}","/posts/#{p.id}")
-    %div.panel-body.fl
-      %img.img_size{:src=>p.avatar}
-    %div.panel-body
-      %b=p.description
-    %div.panel-body.own_time_format 
-      %b Posted 
-      #{time_ago_in_words(p.created_at)} ago
-    %div.panel-body 
-      %b Posted by :
-      #{p.user.email}
+  %div{:id => "#{p.id}"}
+    %div.panel.panel-success
+      %div.panel-heading
+        %b=link_to("#{p.title.truncate(30)}","/posts/#{p.id}")
+      %div.panel-body.fl
+        %img.img_size{:src=>p.avatar}
+      %div.panel-body
+        %b=p.description
+      %div.panel-body.own_time_format 
+        %b Posted 
+        #{time_ago_in_words(p.created_at)} ago
+      %div.panel-body 
+        %b Posted by :
+        #{p.user.email}
+      %div.panel-body 
+        %b=link_to("Delete this post","javascript:void(0)","data-id" => "#{p.id}",:class => "delete_post")
+      
 =link_to("Create a new post",posts_new_path,:class=>"btn btn-success")
-
+:javascript
+  $(".delete_post").click(function() 
+    {
+      var id = $(this).data('id');
+      //alert(id);
+      $.ajax({
+        type: 'DELETE',
+        url: "/posts/delete_post",
+        data:{'post_id': id},
+        success: function(data)
+        { 
+          
+        }, 
+        error: function(data){ alert('error'); } 
+      })
+    });
   
