--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,9 +14,9 @@
     <nav class="navbar navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header active">
-          <a class="navbar-brand">MY NEW APP</a>
+          <a class="navbar-brand" href="/">Reluns Creation</a>
           <ul class="nav navbar-nav">
-            <li><%= link_to("Newsfeed",root_url)%></li>
+            <li><%= link_to("Newsfeed",root_url,:class=>"glyphicon glyphicon-home")%></li>
             <li><%= link_to('Logout', destroy_user_session_path, method: :delete) %></li>
           </ul>
 
