--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,33 +1,44 @@
-<h2>Sign up</h2>
+
 <% if flash[:notice]  %>
   <%= flash[:notice]  %>
 <% end %>
+<style type="text/css">
+  .card{
+    border-style: 1px solid;
+  }
+</style>
+<div style="margin-top: 50px;">
+  <center>
+  <div class="card" style="max-width: 26rem;">
+    <div class="card-body">
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= devise_error_messages! %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+        <div class="field">
+          <%= f.label :email %><br />
+          <%= f.email_field :email, autofocus: true, autocomplete: "email",:class=>"form-control" %>
+        </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email",:class=>"form-control" %>
-  </div>
+        <div class="field">
+          <%= f.label :password %>
+          <% if @minimum_password_length %>
+          <em>(<%= @minimum_password_length %> characters minimum)</em>
+          <% end %><br />
+          <%= f.password_field :password, autocomplete: "off",:class=>"form-control" %>
+        </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off",:class=>"form-control" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off",:class=>"form-control" %>
-  </div>
-  <br>
-  <div class="actions">
-    <%= f.submit "Sign up",:class=>"btn btn-success" %>
-  </div>
-<% end %>
-<br>
-<%= render "devise/shared/links" %>
+        <div class="field">
+          <%= f.label :password_confirmation %><br />
+          <%= f.password_field :password_confirmation, autocomplete: "off",:class=>"form-control" %>
+        </div>
+        <br>
+        <div class="actions">
+          <%= f.submit "Sign up",:class=>"btn btn-success" %>
+        </div>
+      <% end %>
+      <br>
+      <%= render "devise/shared/links" %>
+    </div>
+  </center>
+</div>
 
