--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,13 +4,22 @@
 <% end %>
 <style type="text/css">
   .card{
-    border-style: 1px solid;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 40%;
+    margin-left: 400px;
+    margin-top:  100px;
   }
+  .card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+.card-body{
+  padding: 2px 16px;
+}
 </style>
-<div style="margin-top: 50px;">
-  <center>
-  <div class="card" style="max-width: 26rem;">
-    <div class="card-body">
+<div class="card">
+  <center><h3>Sign Up</h3></center>
+  <div class="card-body">
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <%= devise_error_messages! %>
 
