--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -18,16 +18,14 @@
 }
 </style>
 <div class="card">
-  <center><h3>Sign Up</h3></center>
+  <center><h3 style="box-shadow: 0 1px 1px 0 rgba(0,0,0,0.2);padding-bottom: 4px;"><strong>Sign Up</strong></h3></center>
   <div class="card-body">
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <%= devise_error_messages! %>
-
         <div class="field">
           <%= f.label :email %><br />
           <%= f.email_field :email, autofocus: true, autocomplete: "email",:class=>"form-control" %>
         </div>
-
         <div class="field">
           <%= f.label :password %>
           <% if @minimum_password_length %>
@@ -35,7 +33,6 @@
           <% end %><br />
           <%= f.password_field :password, autocomplete: "off",:class=>"form-control" %>
         </div>
-
         <div class="field">
           <%= f.label :password_confirmation %><br />
           <%= f.password_field :password_confirmation, autocomplete: "off",:class=>"form-control" %>
